# rust-x-perpus

./: .gitignore  Cargo.toml  data.db  data.db-shm  data.db-wal
migrations/: 20221203003449_create_provinces.sql  20221203010413_create_country.sql  20221204012542_create_city.sql  20221204015713_create_district.sql  20221204081220_create_publisher.sql
src/: main.rs
src/config/: app_state.rs
src/modules/: mod.rs
src/modules/city/: builder.rs  controller.rs  entity.rs  model.rs  route.rs  schema.rs
src/modules/country/: builder.rs  controller.rs  entity.rs  model.rs  route.rs  schema.rs
src/modules/district/: builder.rs  controller.rs  entity.rs  model.rs  route.rs  schema.rs
src/modules/province/: builder.rs  controller.rs  entity.rs  mod.rs  model.rs  route.rs  schema.rs
src/modules/publisher/: builder.rs  controller.rs  entity.rs  model.rs  route.rs  schema.rs
src/traits/: builder.rs
src/utils/: json_response.rs  mod.rs  pagination_sort.rs
