[package]
name = "rust-x-perpus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
async-trait = "0.1.58"
bcrypt = "0.13.0"
chrono = { version = "0.4", features = ["serde"] }
duplicate = "0.4.1"
itertools = "0.10.5"
jsonwebtoken = "8.1.1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "json", "sqlite", "chrono", "mysql", "sqlite"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }